objects/MPW_Metal_Stack_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>ASIC R&amp;D</fullName>
                </value>
                <value>
                    <fullName>RF_ASIC_A&amp;D Protos</fullName>
                </value>
                <value>
                    <fullName>Lighting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>TEXT(Process_Type__r.Geometry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW_External_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Type</label>
        <referenceTo>MPW_Config_Settings__c</referenceTo>
        <relationshipLabel>MPW Metal Stack Configuration</relationshipLabel>
        <relationshipName>MPW_Metal_Stack_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MPW Metal Stack Configuration</label>
    <listViews>
        <fullName>All_Metal_Stack</fullName>
        <columns>Geometry__c</columns>
        <columns>Process_Type__c</columns>
        <columns>Category__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Metal Stack</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X14nm</fullName>
        <columns>Geometry__c</columns>
        <columns>Category__c</columns>
        <columns>Process_Type__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>14nm</value>
        </filters>
        <label>14nm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X22nm</fullName>
        <columns>Geometry__c</columns>
        <columns>Category__c</columns>
        <columns>Process_Type__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>22nm</value>
        </filters>
        <label>22nm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X28nm</fullName>
        <columns>Geometry__c</columns>
        <columns>Category__c</columns>
        <columns>Process_Type__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>28nm</value>
        </filters>
        <label>28nm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X40nm</fullName>
        <columns>Geometry__c</columns>
        <columns>Category__c</columns>
        <columns>Process_Type__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>40nm</value>
        </filters>
        <label>40nm</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>X65_55nm</fullName>
        <columns>Geometry__c</columns>
        <columns>Category__c</columns>
        <columns>Process_Type__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Geometry__c</field>
            <operation>equals</operation>
            <value>65/55nm</value>
        </filters>
        <label>65/55nm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Metal Stack</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MPW Metal Stack Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Metal_Stack_Name_20_Characters</fullName>
        <active>false</active>
        <errorConditionFormula>LEN(Name) &gt; 20</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Metal Stack Name should not be more than 20 characters.</errorMessage>
    </validationRules>
</CustomObject>